CS 536/pr5/tests/errors/ReturnWrongTypeFromFunction.minc
int IntFunction()
{
	return 2.0;
}

double DoubleFunction()
{
	return "String";
}

string StringFunction()
{
	return 666;
}

bool BoolFunction()
{
	return 123;
}
